small graphics adjustment

--- a/index.html
+++ b/index.html
@@ -10,7 +10,15 @@
   <body>
     <header class="container">
       <h1>Float simple layout</h1>
+      <p class="justify">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque laborum
+        eum sit distinctio natus et aut, reprehenderit molestias exercitationem
+        recusandae, commodi laudantium? Dignissimos cumque fuga quod? Facere
+        officia quibusdam deleniti? Minus ullam iusto velit veniam temporibus
+        odit possimus.
+      </p>
     </header>
+
     <main class="container">
       <div class="row">
         <div class="col-1-3">
